--- a/asset/styles/login.css
+++ b/asset/styles/login.css
@@ -1,101 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100,200,300,500&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,800i&display=swap');
 
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+* {
+	box-sizing: border-box; 
 }
-.form {
-  position: relative;
-  z-index: 1;
-  background: #FFFFFF;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+
+html {
+  background: #E2E2E2;
 }
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form .message a {
-  color: #4CAF50;
-  text-decoration: none;
-}
-.form .register-form {
-  display: none;
-}
-.container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-.container:before, .container:after {
-  content: "";
-  display: block;
-  clear: both;
-}
-.container .info {
-  margin: 50px auto;
-  text-align: center;
-}
-.container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #1a1a1a;
-}
-.container .info span {
-  color: #4d4d4d;
-  font-size: 12px;
-}
-.container .info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.container .info span .fa {
-  color: #EF3B3A;
-}
+
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: rgb(141,194,111);
-  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
-  font-family: 'Noto Sans', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+	background: #E2E2E2;
+	margin:0;
+	padding:0; 
+	font-family: 'Lato', sans-serif;
+}
+
+.login-form-wrap {
+	background: radial-gradient(ellipse at center,  rgba(81,112,173,1) 0%,rgba(53,84,147,1) 100%);
+	border:1px solid #2d416d;
+	box-shadow: 0 1px #5670A4 inset, 0 0 10px 5px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	width: 360px;
+	height: 380px;
+	margin: 60px auto;
+	padding: 50px 30px 0 30px;
+	text-align: center;
+	
+	h1 {
+		margin: 0 0 50px 0;
+		padding: 0;  
+		font-size: 26px;
+		color: #fff;
+	}
+	h5 {
+		margin-top: 40px;
+	}
+	h5 > a {
+		font-size: 14px;
+		color: #fff;
+		text-decoration: none; 
+		font-weight: 400;
+	}
+}
+
+.login-form {
+
+	& input[type="email"], input[type="password"],  {
+		width: 100%; 
+		border: 1px solid #314d89;
+		outline: none;
+		padding: 12px 20px;
+		color: #afafaf;
+		font-weight: 400;
+		font-family: 'Noto Sans', sans-serif;
+		cursor:pointer;
+	}
+
+	& input[type="email"] {
+		border-bottom: none; 
+		border-radius: 4px 4px 0 0;
+		padding-bottom: 13px;
+		box-shadow: 0 -1px 0 #E0E0E0 inset,
+					0 1px 2px rgba(0, 0, 0, 0.23) inset;
+	}
+
+	& input[type="password"] {
+		border-top: none; 
+		border-radius: 0 0 4px 4px;
+		box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.23) inset,
+					0 1px 2px rgba(255, 255, 255, 0.1);
+	}
+
+	& input[type="submit"] {
+		font-family: 'Noto Sans', sans-serif;
+		font-weight: 400;
+		background: linear-gradient(to bottom,  rgba(224,224,224,1) 0%,rgba(206,206,206,1) 100%);
+		display: block;
+		margin: 20px auto 0 auto;
+		width: 100%;
+		border: none;
+		border-radius: 3px;
+		padding: 8px;
+		font-size: 17px;
+		color: #636363;
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.45);
+		font-weight: 700;
+		box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.17), 0 1px 0 rgba(255, 255, 255, 0.36) inset;
+    
+    &:hover {
+		background: #DDD; 
+    }
+    
+    &:active {
+		padding-top: 9px;
+		padding-bottom: 7px;
+		background: #C9C9C9; 
+    }
 }
 .clear {display:block;}
 .clear::before, .clear::after{display:table; content:"";}
