--- a/asset/styles/login.css
+++ b/asset/styles/login.css
@@ -2,22 +2,117 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,800i&display=swap');
 
 * {
-	box-sizing: border-box; 
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-
-html {
-  background: #E2E2E2;
-}
-
+           
 body {
-	background: #E2E2E2;
-	margin:0;
-	padding:0; 
-	font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+    background-color: #f0f2f5;
+    color: #1c1e21;
 }
 
-.login-form-wrap {
-	background-color: #42b72a;
+main {
+    height: 90vh;
+    width: 100vw;
+    position: relative;
+    margin: 0 auto;
+}
+
+footer {
+    height: 10vh;
+    background-color: #ffffff;
+}
+
+.row {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    max-width: 1000px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.colm-logo {
+    flex: 0 0 50%;
+    text-align: left;
+}
+
+.colm-form {
+    flex: 0 0 40%;
+    text-align: center;
+}
+
+.colm-logo img {
+    max-width: 400px;
+}
+
+.colm-logo h2 {
+    font: 26px;
+    font-weight: 400;
+    padding: 0 30px;
+    line-height: 32px;
+}
+
+.colm-form .form-container {
+    background-color: #ffffff;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    padding: 20px;
+    max-width: 400px;
+}
+
+.colm-form .form-container input, .colm-form .form-container .btn-login {
+    width: 100%;
+    margin: 5px 0;
+    height: 45px;
+    vertical-align: middle;
+    font-size: 16px;
+}
+
+.colm-form .form-container input {
+    border: 1px solid #dddfe2;
+    color: #1d2129;
+    padding: 0 8px;
+    outline: none;
+}
+
+.colm-form .form-container input:focus {
+    border-color: #1877f2;
+    box-shadow: 0 0 0 2px #e7f3ff;
+}
+
+.colm-form .form-container .btn-login {
+    background-color: #1877f2;
+    border: none;
+    border-radius: 6px;
+    font-size: 20px;
+    padding: 0 16px;
+    color: #ffffff;
+    font-weight: 700;
+}
+
+.colm-form .form-container a {
+    display: block;
+    color: #1877f2;
+    font-size: 14px;
+    text-decoration: none;
+    padding: 10px 0 20px;
+    border-bottom: 1px solid #dadde1;
+}
+
+.colm-form .form-container a:hover {
+    text-decoration: underline;
+}
+
+.colm-form .form-container .btn-new {
+    background-color: #42b72a;
     border: none;
     border-radius: 6px;
     font-size: 17px;
@@ -26,78 +121,64 @@ body {
     color: #ffffff;
     font-weight: 700;
     margin-top: 20px; 
-	
-	h1 {
-		margin: 0 0 50px 0;
-		padding: 0;  
-		font-size: 26px;
-		color: #fff;
-	}
-	h5 {
-		margin-top: 40px;
-	}
-	h5 > a {
-		font-size: 14px;
-		color: #fff;
-		text-decoration: none; 
-		font-weight: 400;
-	}
 }
 
-.login-form {
-
-	& input[type="email"], input[type="password"],  {
-		width: 100%; 
-		border: 1px solid #314d89;
-		outline: none;
-		padding: 12px 20px;
-		color: #afafaf;
-		font-weight: 400;
-		font-family: 'Noto Sans', sans-serif;
-		cursor:pointer;
-	}
-
-	& input[type="email"] {
-		border-bottom: none; 
-		border-radius: 4px 4px 0 0;
-		padding-bottom: 13px;
-		box-shadow: 0 -1px 0 #E0E0E0 inset,
-					0 1px 2px rgba(0, 0, 0, 0.23) inset;
-	}
-
-	& input[type="password"] {
-		border-top: none; 
-		border-radius: 0 0 4px 4px;
-		box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.23) inset,
-					0 1px 2px rgba(255, 255, 255, 0.1);
-	}
-
-	& input[type="submit"] {
-		font-family: 'Noto Sans', sans-serif;
-		font-weight: 400;
-		background: linear-gradient(to bottom,  rgba(224,224,224,1) 0%,rgba(206,206,206,1) 100%);
-		display: block;
-		margin: 20px auto 0 auto;
-		width: 100%;
-		border: none;
-		border-radius: 3px;
-		padding: 8px;
-		font-size: 17px;
-		color: #636363;
-		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.45);
-		font-weight: 700;
-		box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.17), 0 1px 0 rgba(255, 255, 255, 0.36) inset;
-    
-    &:hover {
-		background: #DDD; 
-    }
-    
-    &:active {
-		padding-top: 9px;
-		padding-bottom: 7px;
-		background: #C9C9C9; 
-    }
+.colm-form p {
+    font-size: 14px;
 }
-.clear {display:block;}
-.clear::before, .clear::after{display:table; content:"";}
-.clear, .clear::after{clear:both;}
+
+.colm-form p a {
+    text-decoration: none;
+    color: #1c1e21;
+    font-weight: 600;
+}
+
+.colm-form p a:hover {
+    text-decoration: underline;
+}
+
+.footer-contents {
+    position: relative;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+footer ol {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding: 10px 0;
+}
+
+footer ol:first-child {
+    border-bottom: 1px solid #dddfe2;
+}
+           
+footer ol:first-child li:last-child button {
+    background-color: #f5f6f7;
+    border: 1px solid #ccd0d5;
+    outline: none;
+    color: #4b4f56;
+    padding: 0 8px;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+footer ol li {
+    padding-right: 15px;
+    font-size: 12px;
+    color: #385898;
+}
+
+footer ol li a {
+    text-decoration: none;
+    color: #385898;
+}
+
+footer ol li a:hover {
+    text-decoration: underline;
+}
+
+footer small {
+    font-size: 11px;
+}
