--- a/e-imp/asset/css/master.css
+++ b/e-imp/asset/css/master.css
@@ -11,6 +11,7 @@ Programmer		:	Stevanus Andika Nasution
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,800i&display=swap');
 @import url('fontawesome/css/font-awesome.min.css');
 @import url('navigationMenu.css');
-@import url('w3.css');
+/*@import url('w3.css');*/
+@impoy url('https://www.w3schools.com/w3css/4/w3.css');
 @import url('navigationMenu.css');
 @import url('common.css');
