--- a/asset/styles/login.css
+++ b/asset/styles/login.css
@@ -38,7 +38,7 @@ footer {
 }
 
 .colm-logo {
-    flex: 0 0 40%;
+    flex: 0 0 45%;
     text-align: left;
 }
 
@@ -52,11 +52,11 @@ footer {
 }
 
 .colm-logo h2 {
-    font: 26px;
+    font: 20px;
     font-weight: 500;
     padding: 0 30px;
     line-height: 32px;
-	color:#ddd;
+	color:#141632;
 }
 
 .colm-form .form-container {
