--- a/e-imp/asset/css/w3.css
+++ b/e-imp/asset/css/w3.css
@@ -24,7 +24,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 [type=search]::-webkit-search-decoration{-webkit-appearance:none}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
-html,body{-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;font-family:-apple-system, BlinkMacSystemFont,Rubik,"Noto Sans", Roboto, sans-serif;font-weight:400;font-size:14px;line-height:1.3;background-color:#fff}html{overflow-x:hidden}
+html,body{-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;font-family:-apple-system, BlinkMacSystemFont, Roboto, sans-serif;font-weight:400;font-size:14px;line-height:1.3;background-color:#fff}html{overflow-x:hidden}
 h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}.w3-serif{font-family:serif}
 h1,h2,h3,h4,h5,h6{font-weight:500;margin:10px 0;color:#ddd}.w3-wide{letter-spacing:4px}
 hr{border:0;border-top:1px solid #eee;margin:20px 0}
