--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -180,7 +180,7 @@
 .header a.logo {font-size: 25px;font-weight: bold;}
 .header a:hover {background-color: #ddd;color: black;}
 .header a.active {background-color: dodgerblue;color: white;}
-.header-right{float: right}
+.header-right{float: right;text-decoration: none;}
 
 /*side menu ------*/
 .sidenav{height: 94%;position: fixed;z-index: 1;transition: 0.5s;overflow-x: hidden;border-right: 0px;top: 45px;width: 250px;background-color: #e1e1d0;overflow : auto;left:-250px;}
