--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -177,6 +177,7 @@
 .topnav-content{padding:4px 6px;font-weight:500;/*letter-spacing:0.16em*/}
 .headerDiv-content{display:table-cell}
 .topnav-content button{border:none;outline:none;background:none;}
+.header a {float: left;color: black;text-align: center;padding: 12px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;}
 .header a.logo {font-size: 25px;font-weight: bold;}
 .header a:hover {background-color: #ddd;color: black;}
 .header a.active {background-color: dodgerblue;color: white;}
@@ -422,13 +423,11 @@ font-family:Tahoma;font-size:0.96em;padding:4px 24px;text-decoration:none;}
 .imp-row-padding>.imp-quarter,.imp-row-padding>.imp-col{padding:0 8px}
 .imp-col,.imp-half,.imp-third,.imp-twothird,.imp-threequarter,.imp-quarter{float:left}
 
-
 .imp-table {border:0;padding:0;border-spacing:0;letter-spacing:1px;font-weight:normal}
 .imp-table tr {border: 0;padding: 3px;}
 .imp-table th, .imp-table td {padding: 3px;text-transform:uppercase}
 .imp-table td {border:1px solid #ccc;font-size:0.90!important}
 .imp-table th {border:1px solid #ccc;font-size:0.89!important}
-
 
 /* scrollbar style */
 ::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);background-color:#F5F5F5}
@@ -477,7 +476,8 @@ header h1 {margin: 0;padding: 0 15px;height:28px;line-height:28px;font-weight:50
 	.form-login {width:450px;height:220px;}
 
 	.flex-item{width:100%!important}
-	
+	.header a {float: none;display: block;text-align: left;}  
+	.header-right {float: none;}	
 	html {
 		overflow-x:auto;
 	}	
