--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -178,7 +178,8 @@
 .headerDiv-content{display:table-cell}
 .topnav-content button{border:none;outline:none;background:none;}
 .header a {float: left;color: black;text-align: center;padding: 12px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;}
-.header a.logo {font-size: 25px;font-weight: bold;}
+/*.header a.logo {font-size: 25px;font-weight: bold;}*/
+.header .logo {font-size: 25px;font-weight: bold;padding: 12px 12px; border-radius: 4px}
 .header a:hover {background-color: #ddd;color: black;}
 .header a.active {background-color: dodgerblue;color: white;}
 .header-right{float: right;text-decoration: none;}
