--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -172,7 +172,7 @@
 
 /* dashboard ------*/ 
 .topnav{position:fixed;z-index:1;left:0px!important;top:0px!important;width:100%;background-color:#fbfcfc;height:35px;font-size:15px;font-weight:500;color:#2874A6;padding:10px 10px}
-.header{position:fixed;display:block;z-index:1;left:0px!important;top:0px!important;width:100%;background-color: #2471a3;padding:12px 10px}
+.header{position: fixed;display: block;z-index: 1;left: 0px!important;top: 0px!important;width: 100%;background-color: #2471a3;padding: 12px 10px}
 .topnav-content, .header{/*border:1px solid #eaf2f8!important;*/border-bottom:1px solid #ddd; /*#eaf2f8;*/box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);}
 .topnav-content{padding:4px 6px;font-weight:500;/*letter-spacing:0.16em*/}
 .headerDiv-content{display:table-cell}
@@ -216,41 +216,13 @@
 .imp-select{padding:3px 0;width:100%;border:1px solid #ccc}
 
 /* start page container  ----------- */
-.wrapper{	
-	margin-top:45px;
-	border: none;	
-}	
-.wrapper::after{
-	content:"";
-	display:table;
-	clear:both
-}
-.clearfix:after {
-	content:"";
-	display:block;
-	clear:both
-}
-.wrapper-main{
-	margin-top: 10px;
-	border: none;
-	width: 98%;
-	min-height: 98%;
-	margin: auto;
-	padding: 15px 15px;
-}
-.wrapper-main::after{
-	content:"";
-	display:table;
-	clear:both
-}	
+.wrapper{margin-top: 55px;border: 2px solid #000;}	
+.wrapper::after{content:"";display:table;clear:both}
+.clearfix:after {content:"";display:block;clear:both}
+.wrapper-main{margin-top: 10px;	border: none;width: 98%;min-height: 98%;margin: auto;padding: 15px 15px;}
+.wrapper-main::after{content:"";display:table;clear:both}	
 
-#pageTitle {
-	border:2px solid #2471a3;
-	background-color:#2471a3;
-	padding:10px 0px 5px 10px;
-	color: #fff;
-	font-size:14px;
-}
+#pageTitle {border:2px solid #2471a3;background-color:#2471a3;padding:10px 0px 5px 10px;color: #fff;font-size:14px;}
 .page--title2 {background-color:#2471a3;padding:12px 10px;color: #fff/*#2e4053 */;font-size:1rem;font-weight:500;}	
 #ButtonNavigation{max-width:500px;background-color:#fee1e4;}	
 
@@ -401,16 +373,8 @@ font-family:Tahoma;font-size:0.96em;padding:4px 24px;text-decoration:none;}
 .box-content h1{font-family:Play,Tahoma;font-weight:700;font-size:20px!important}
 
 .flexContainer {display: flex;}
-.flex-container {
-	margin:0;
-	list-style:none;
-	display: flex;
-	justify-content: flex-start;
-	flex-wrap: nowrap;
-}
-.flex-container > div {
-	margin: 10px;
-}	
+.flex-container {margin: 0;list-style: none;display: flex;justify-content: flex-start;flex-wrap: nowrap;}
+.flex-container > div {margin: 10px;}	
 .flex-item{flex:0 0 auto;}
 .flex-item a{text-decoration: none;cursor:pointer;color:#2196F3}
 .flex-item button:hover{color: #21618c}
@@ -458,7 +422,8 @@ header h1 {margin: 0;padding: 0 15px;height:28px;line-height:28px;font-weight:50
 
 /* Small devices (tablets)
 ==========================*/
-@media only screen and (max-width: 770px) {
+@media only screen and (max-width: 770px) 
+{
 	#appTitle{font:500 15px/normal Roboto, Tahoma;}  
 	#ButtonNavigation{width:100%!important}	
 	#app--title1{display:none}
@@ -467,38 +432,24 @@ header h1 {margin: 0;padding: 0 15px;height:28px;line-height:28px;font-weight:50
 	#navigation{display:table-cell;border:0;outline:none!important;background-color:#0059b3;color:#fff;font-weight:600;font-size:16px;}
 	#desktop{display:none}
   
+	html {overflow-x:auto;}	
 	.webfooter, .fr-desktop {display:none!important;}
 
-	.wrapper {
-		margin-left:0px;
-		width:100%;
-		padding:20px 8px;	
-	}
+	.wrapper {width:98%;padding:20px 8px;left: 50%;top: 50%;transform: translate(-50%, -50%);}
 	.form-login {width:450px;height:220px;}
 
 	.flex-item{width:100%!important}
-	.header a {float: none;display: block;text-align: left;}  
-	.header-right {float: none;}	
-	html {
-		overflow-x:auto;
-	}	
-	form.changepswd, form.rpt {
-		width: 95%;
-	}
-	form.changepswd h1, form.rpt h1, form.search h1 {		
-		font-size: 15px;
-	}	
-	form.changepswd #inside-wrapper, form.rpt #inside-wrapper {
-		width:80%;
-	}
-	form.search button {
-		margin-left: -53px;
-	}	
+	
+	form.changepswd, form.rpt {width: 95%;}
+	form.changepswd h1, form.rpt h1, form.search h1 {font-size: 15px;}	
+	form.changepswd #inside-wrapper, form.rpt #inside-wrapper {width: 80%;}
+	form.search button {margin-left: -53px;}	
 }
 
 /* Medium devices (desktops)
 ==========================*/
-@media only screen and (min-width: 771px) {
+@media only screen and (min-width: 771px) 
+{
 	#navigation {display:none}  
 	#desktop{display:table-cell}	
 	#app--title1{display:block}
@@ -507,29 +458,14 @@ header h1 {margin: 0;padding: 0 15px;height:28px;line-height:28px;font-weight:50
 	.webfooter, .fr-desktop {display:block;}	
 	.fr-desktop {padding:20px 10px}	
 
-	.wrapper {
-		margin-left:251px;
-		width:82%;
-		padding:20px 10px;	
-	}  
+	.wrapper {width:90%;padding:10px 10px;left: 50%;top: 50%;transform: translate(-50%, -50%);}  
 	.form-login {width: 33%;height:220px;}
 	.logo img {width: 200px;text-align: center;margin-top: 10px;float: none;}
 	.toggle_menu{display:none} 
 	
-	html{
-		overflow-x: hidden; 
-	}
-	form.changepswd, form.rpt {
-		width: 80%;
-	}	
-	form.changepswd h1, form.rpt h1, form.search h1 {
-		font-size: 0.8756em;
-	}
-	form.changepswd #inside-wrapper, form.rpt #inside-wrapper {
-		width:60%;
-	}	
-	form.search button {
-		margin-left: -93px;
-	}	
-	
+	html{overflow-x: hidden;}
+	form.changepswd, form.rpt {width: 80%;}	
+	form.changepswd h1, form.rpt h1, form.search h1 {font-size: 0.8756em;}
+	form.changepswd #inside-wrapper, form.rpt #inside-wrapper {width:60%;}	
+	form.search button {margin-left: -93px;}		
 }
