--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -216,7 +216,7 @@
 .imp-select{padding:3px 0;width:100%;border:1px solid #ccc}
 
 /* start page container  ----------- */
-.wrapper{margin-top: 75px;border: 2px solid #000;background-color: #F0F3F4;padding: 10px 10x;left: 50%;top: 50%;transform: translate(-50%, -50%);}	
+.wrapper{top: 75px;left: 10px; right: 10px;border: 2px solid #000;background-color: #F0F3F4;padding: 10px 10x;}	
 .wrapper::after{content:"";display:table;clear:both}
 .clearfix:after {content:"";display:block;clear:both}
 .wrapper-main{margin-top: 10px;	border: none;width: 98%;min-height: 98%;margin: auto;padding: 15px 15px;}
@@ -458,7 +458,6 @@ header h1 {margin: 0;padding: 0 15px;height:28px;line-height:28px;font-weight:50
 	.webfooter, .fr-desktop {display:block;}	
 	.fr-desktop {padding:20px 10px}	
 
-	.wrapper {width:90%;}  
 	.form-login {width: 33%;height:220px;}
 	.logo img {width: 200px;text-align: center;margin-top: 10px;float: none;}
 	.toggle_menu{display:none} 
