--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -262,64 +262,21 @@ float: left;height: 30px;padding: 0;width: 100px;cursor: pointer;font: bold 14px
 .msg-on-footer {position:fixed;left:0;right:0;bottom:0px;min-width:900px !important;width:100%;height:30px;background: #2e86c1;color:#fff;padding-top:7px;text-align:center} 
 
 /* search style */
-form.search input[type=text],select 
-{
-	padding: 6px;
-	border: 1px solid #ccc;
-	float: left;
-	width: 80%;
-	text-transform:uppercase;
-}	
-form.search button {
-	float: left;
-	width: 20%;
-	padding: 5px;
-	background: #2196F3;
-	color: white;
-	border: 1px solid grey;
-	border-left: none;
-	cursor: pointer;	
-	height: 29px;
-}	
-form.search button: hover {
-	background: #0b7dda;
-}
-form.search::after {
-	content: "";
-	clear: both;
-	display: table;	
-}	
+form.search input[type=text],select {padding: 6px;border: 1px solid #ccc;float: left;width: 80%;text-transform:uppercase;}	
+form.search button {float: left;width: 20%;padding: 7px;background: #2196F3;color: white;border: 1px solid grey;border-left: none;cursor: pointer;height: 29px;border-radius: 4px;}	
+form.search button: hover {background: #0b7dda;}
+form.search::after {content: "";clear: both;display: table;}	
 /* end search style */
 
 /* change password style */
-form.changepswd, form.rpt, form.search {
-	border: 1px solid #ebebe0;
-	background-color: #f5f5ef;	 
-	padding:10px 20px;
-    margin: auto;	
-}	  
-form.changepswd h1, form.rpt h1, form.search h1 {
-	color: #9d9d62;
-	font-weight: 600;
-	margin: 3px 0px 0px 0px;
-	font-size: 16px;
-	text-transform: uppercase;
-}	
-form.changepswd span,form.rpt span {
-	color: #7a7a52;	
-}	
-form.changepswd #inside-wrapper, form.rpt #inside-wrapper {
-	margin: auto;
-}	
-form.changepswd::after,form.rpt::after {
-	content: "";
-	clear: both;
-	display: table;	
-}
+form.changepswd, form.rpt, form.search {border: 1px solid #ebebe0;background-color: #f5f5ef;padding: 10px 20px;margin: auto;}	  
+form.changepswd h1, form.rpt h1, form.search h1 {color: #9d9d62;font-weight: 600;margin: 3px 0px 0px 0px;font-size: 16px;text-transform: uppercase;}	
+form.changepswd span,form.rpt span {color: #7a7a52;}	
+form.changepswd #inside-wrapper, form.rpt #inside-wrapper {margin: auto;}	
+form.changepswd::after,form.rpt::after {content: "";clear: both;display: table;}
 /* end change password style */
 
-.stdbutton{
-  background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.16, rgb(207,207,207)),color-stop(0.79, rgb(252,252,252)));
+.stdbutton{background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.16, rgb(207,207,207)),color-stop(0.79, rgb(252,252,252)));
   background-image: -moz-linear-gradient(center bottom,rgb(207,207,207) 16%,rgb(252,252,252) 79%);border:1px solid #bbb7b5;padding:5px 10px;text-decoration:none;color:#000;}	
 .button-blue{border:1px solid rgba(0,0,0,0.55);display:inline-block;outline:none;padding:5px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:#fff;background-color:#1f618d;text-align:center;cursor:pointer!important;white-space:nowrap;-moz-border-radius:2px;-webkit-border-radius:2px;
 border-radius:2px;box-shadow:0 0 10px rgba(0,0,0,0.35),0 2px 1px rgba(255,255,255,0.50),inset 0 1px 4px rgba(0,0,0,0.35),inset 0 -14px 14px rgba(255,255,255,0.10);-webkit-box-shadow:0 0 10px rgba(0,0,0,0.35),0 2px 1px rgba(255,255,255,0.50),inset 0 1px 4px rgba(0,0,0,0.35),inset 0 -14px 14px rgba(255,255,255,0.10);
