--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -172,11 +172,11 @@
 
 /* dashboard ------*/ 
 .topnav{position:fixed;z-index:1;left:0px!important;top:0px!important;width:100%;background-color:#fbfcfc;height:35px;font-size:15px;font-weight:500;color:#2874A6;padding:10px 10px}
-.header{position: fixed;display: block;z-index: 1;left: 0px!important;top: 0px!important;width: 100%;background-color: #2471a3;padding: 12px 10px}
 .topnav-content, .header{/*border:1px solid #eaf2f8!important;*/border-bottom:1px solid #ddd; /*#eaf2f8;*/box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);}
 .topnav-content{padding:4px 6px;font-weight:500;/*letter-spacing:0.16em*/}
 .headerDiv-content{display:table-cell}
 .topnav-content button{border:none;outline:none;background:none;}
+.header{position: fixed;display: block;z-index: 1;left: 0px!important;top: 0px!important;width: 100%;background-color: #2471a3;padding: 12px 10px}
 .header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;}
 /*.header a.logo {font-size: 25px;font-weight: bold;}*/
 .header .logo {font-size: 25px;font-weight: bold;padding: 10px 10px; border-radius: 4px}
@@ -215,7 +215,11 @@
 .imp-input{padding:3px;display:block;border:1px solid #ccc;width:100%}
 .imp-select{padding:3px 0;width:100%;border:1px solid #ccc}
 
-/* start page container  ----------- */
+/* wrapper */
+.wrapper-header{display: block;top: 0px!important;width: 100%;padding: 10px 10px} 
+.wrapper-header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;}
+.wrapper-header .wrapper-header a:hover {background-color: #ddd;color: black;}
+.wrapper-header .wrapper-header a.active {background-color: white;color: white;}
 .wrapper{margin-top: 90px;left: 10px; right: 10px;/*border: 1px solid #ddd;background-color: #F0F3F4;border-radius: 3px;*/}	
 .wrapper::after{content:"";display:table;clear:both}
 .clearfix:after {content:"";display:block;clear:both}
