--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -218,8 +218,8 @@
 /* wrapper */
 .wrapper-header{display: block;top: 0px!important;width: 100%;padding: 10px 10px} 
 .wrapper-header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;}
-.wrapper-header .wrapper-header a:hover {background-color: #ddd;color: black;}
-.wrapper-header .wrapper-header a.active {background-color: white;color: white;}
+.wrapper-header a:hover {background-color: #ddd;color: black;}
+.wrapper-header a.active {background-color: white;color: white;}
 .wrapper{margin-top: 90px;left: 10px; right: 10px;/*border: 1px solid #ddd;background-color: #F0F3F4;border-radius: 3px;*/}	
 .wrapper::after{content:"";display:table;clear:both}
 .clearfix:after {content:"";display:block;clear:both}
