--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -217,7 +217,7 @@
 
 /* wrapper */
 .wrapper-header{display: block;top: 0px!important;width: 100%;padding: 10px 10px} 
-.wrapper-header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;border: 1px solid #ddd;}
+.wrapper-header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;border: 2px solid #d0d3d4}
 .wrapper-header a:hover {background-color: #ddd;color: black;}
 .wrapper{margin-top: 90px;left: 10px; right: 10px;/*border: 1px solid #ddd;background-color: #F0F3F4;border-radius: 3px;*/}	
 .wrapper::after{content:"";display:table;clear:both}
