--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -179,7 +179,7 @@
 .header{position: fixed;display: block;z-index: 1;left: 0px!important;top: 0px!important;width: 100%;background-color: #2471a3;padding: 12px 10px}
 .header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 25px;border-radius: 4px;}
 /*.header a.logo {font-size: 25px;font-weight: bold;}*/
-.header .logo {font-size: 25px;font-weight: bold;padding: 10px 10px; border-radius: 4px}
+.header .logo {font-size: 25px;font-weight: bold;padding: 10px 10px; border-radius: 4px;}
 .header a:hover {background-color: #ddd;color: black;}
 .header a.active {background-color: dodgerblue;color: white;}
 .header-right{float: right;text-decoration: none;}
@@ -193,7 +193,7 @@
 .dropdown-btn:hover {color: #fff;background-color:green;}	
 .menu-group-title {display: block;height:25px;line-height:25px;font-weight:600}
 .menu-link {display: block;padding: 6px 0 4px 0;overflow: hidden;text-decoration:0;color: #2874A6;white-space: nowrap;cursor:pointer;background-color: #58d68d;}
-.sub-menu-link {display: block;text-decoration: none!important;white-space: nowrap;cursor: pointer;line-height: 20px;color: #2874A6;outline: none;padding-left: 10px!important}
+.sub-menu-link {display: block;text-decoration: none!important;white-space: nowrap;cursor: pointer;line-height: 23px;color: #2874A6;outline: none;padding-left: 10px!important}
 .menu-icon {display: block;float: left;width: 50px;height: 40px;line-height: 40px;font-size: 20px;color: red}
 .active {background-color: green;color: white;}	
 .dropdown-container{display: none;background-color: #d6d6c2;}
@@ -217,6 +217,7 @@
 
 /* wrapper */
 .wrapper-header{display: block;top: 0px!important;width: 100%;padding: 10px 10px} 
+.wrapper-header .title {font-weight: bold;padding: 10px 10px;}
 .wrapper-header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-radius: 4px;border: 2px solid #d0d3d4}
 .wrapper-header a:hover {background-color: #ddd;color: black;}
 .wrapper{margin-top: 90px;left: 10px; right: 10px;/*border: 1px solid #ddd;background-color: #F0F3F4;border-radius: 3px;*/}	
