--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -154,8 +154,8 @@
 	
 .border-radius-3{-moz-border-radius: 3px;-webkit-border-radius: 3px;border-radius: 3px}
 .border-radius-5{-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px}
-.left-rounded-5{-moz-border-radius: 5px 0 0 5px;-webkit-border-radius: 5px 0 0 5px;border-radius: 5px 0 0 5px;}
-.right-rounded-5{-moz-border-radius: 0 5px 5px 0;-webkit-border-radius: 0 5px 5px 0;border-radius: 0 5px 5px 0;}
+.right-rounded-5{border-top-right-radius: 5px;border-bottom-right-radius: 5px}
+.left-rounded-5{border-top-left-radius: 5px;border-bottom-left-radius: 5px}
 
 .se-pre-con{position:fixed;left:0;top:0;width:100%;height:100%;z-index:9999;background:url(../img/loading.gif) center no-repeat #fff}
 
