--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -218,10 +218,6 @@
 .imp-select{padding:3px 0;width:100%;border:1px solid #ccc}
 
 /* wrapper */
-.wrapper-header{display: block;top: 0px!important;width: 100%;padding: 10px 10px} 
-.wrapper-header .title {font-weight: bold;padding: 10px 10px;border: none;}
-.wrapper-header a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-radius: 4px;border: 2px solid #d0d3d4}
-.wrapper-header a:hover {background-color: #ddd;color: black;}
 .wrapper{margin-top: 82px;left: 10px; right: 10px;/*border: 1px solid #ddd;background-color: #F0F3F4;border-radius: 3px;*/}	
 .wrapper::after{content:"";display:table;clear:both}
 .clearfix:after {content:"";display:block;clear:both}
@@ -320,6 +316,11 @@ background-color:#bc3315;}
 .form-login{position:absolute;margin-left:auto;margin-right:auto;margin-top:auto;margin-bottom:auto;left:0;right:0;bottom:0;top:0;border:2px solid #f39c12;background: #fdfefe!important}
 
 /*dashboard, page header*/
+.row {display: flex;flex-direction: row;justify-content: space-around;align-items: center;width: 100%;max-width: 1000px;position: absolute;top: 0px;border:1px solid #ddd;}
+.colm-left {flex: 0 0 30%;text-align: left;}
+.colm-right {flex: 0 0 70%;text-align: center;}
+.colm-right a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-radius: 4px;border: 2px solid #d0d3d4}
+
 .imp-rh-lg{/*raise, light grey*/-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;box-shadow:inset 0px 1px 0px 0px #ffffff;
 background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
 background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
