--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -316,7 +316,7 @@ background-color:#bc3315;}
 .form-login{position:absolute;margin-left:auto;margin-right:auto;margin-top:auto;margin-bottom:auto;left:0;right:0;bottom:0;top:0;border:2px solid #f39c12;background: #fdfefe!important}
 
 /*dashboard, page header*/
-.row {display: flex;flex-direction: row;justify-content: space-around;align-items: center;width: 100%;max-width: 1000px;position: absolute;top: 0px;border:1px solid #ddd;}
+.row {display: flex;flex-direction: row;justify-content: space-around;align-items: center;width: 100%;border:1px solid #ddd;}
 .colm-left {flex: 0 0 30%;text-align: left;} 
 .colm-right {flex: 0 0 70%;text-align: center;}
 .colm-right a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-radius: 4px;border: 2px solid #d0d3d4}
