--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -318,8 +318,9 @@ background-color:#bc3315;}
 /*dashboard, page header*/
 .row {display: flex;flex-direction: row;justify-content: space-around;align-items: center;width: 100%;border:1px solid #ddd;}
 .colm-left {flex: 0 0 30%;text-align: left;} 
+.colm-left .header {color: #1A5276;font-weight: 500}
 .colm-right {flex: 0 0 70%;text-align: center;}
-.colm-right a {float: left;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-radius: 4px;border: 2px solid #d0d3d4}
+.colm-right a {float: right;color: black;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border: 1px solid #d0d3d4}
 
 .imp-rh-lg{/*raise, light grey*/-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;box-shadow:inset 0px 1px 0px 0px #ffffff;
 background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
