--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -316,11 +316,10 @@ background-color:#bc3315;}
 .form-login{position:absolute;margin-left:auto;margin-right:auto;margin-top:auto;margin-bottom:auto;left:0;right:0;bottom:0;top:0;border:2px solid #f39c12;background: #fdfefe!important}
 
 /*dashboard, page header*/
-.row {display: flex;flex-direction: row;justify-content: space-around;align-items: center;width: 100%;border:1px solid #ddd;background-color: #17202A;}
-.colm-left {flex: 0 0 30%;text-align: left;} 
-.colm-left .header {color: #1A5276;font-weight: 500}
+.row {display: flex;flex-direction: row;justify-content: space-around;align-items: center;width: 100%;border:1px solid #212F3C;background-color: #17202A;}
+.colm-left {flex: 0 0 30%;text-align: left;padding-left: 10px;} 
 .colm-right {flex: 0 0 70%;text-align: center;}
-.colm-right a {float: right;color: white;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-right: 1px solid #d0d3d4}
+.colm-right a {float: right;color: white;text-align: center;padding: 10px;text-decoration: none;font-size: 14px;line-height: 20px;border-right: 1px solid #212F3C}
 
 .imp-rh-lg{/*raise, light grey*/-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;box-shadow:inset 0px 1px 0px 0px #ffffff;
 background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
