--- a/e-imp/asset/css/master.css
+++ b/e-imp/asset/css/master.css
@@ -7,7 +7,7 @@ Programmer		:	Stevanus Andika Nasution
 
 @import url('normalize.css');
 /*@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 @import url('fontawesome/css/font-awesome.min.css');
 @import url('navigationMenu.css');
