--- a/e-imp/asset/css/master.css
+++ b/e-imp/asset/css/master.css
@@ -6,8 +6,8 @@ Programmer		:	Stevanus Andika Nasution
 -------------------------------------------------------------------*/
 
 @import url('normalize.css');
-/*@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');*/
 @import url('fontawesome/css/font-awesome.min.css');
 @import url('navigationMenu.css');
 @import url('w3.css');
