--- a/e-imp/asset/css/common.css
+++ b/e-imp/asset/css/common.css
@@ -187,10 +187,10 @@
 .header-right{float: right;text-decoration: none;}
 
 /*side menu ------*/
-.sidenav{height: 94%;position: fixed;z-index: 1;transition: 0.5s;overflow-x: hidden;border-right: 0px;top: 80px;width: 250px;background-color: #e1e1d0;overflow : auto;left:-250px;}
+.sidenav{height: 94%;position: fixed;z-index: 1;transition: 0.5s;overflow-x: hidden;border-right: 0px;top: 80px;width: 250px;background-color: #212F3C/*#e1e1d0*/;overflow : auto;left:-250px;}
 .sidenav a, .dropdown-btn{display: block;background: none;cursor: pointer;outline: none;border: none;text-decoration: none;width: 100%;text-align: left;}
 .sidenav a {padding: 2px 0px 2px 5px;}	
-.sidenav a:hover {color: #0033cc;}
+.sidenav a:hover {background-color: #fff;border-color: #E74C3C;border-radius: 4px;color: #0033cc;}
 .dropdown-btn {padding: 8px 0px 8px 5px;border-bottom: 1px solid #b8b894;}	
 .dropdown-btn:hover {color: #fff;background-color:green;}	
 .menu-group-title {display: block;height:25px;line-height:25px;font-weight:600}
