--- a/asset/styles/login.css
+++ b/asset/styles/login.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100,200,300,500&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,800i&display=swap');
-
 * {
     padding: 0;
     margin: 0;
@@ -8,7 +5,7 @@
 }
            
 body {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: Verdana, sans-serif;
     background-color: #f0f2f5;
     color: #1c1e21;
 }
