--- a/e-imp/asset/css/master.css
+++ b/e-imp/asset/css/master.css
@@ -15,4 +15,5 @@ Programmer		:	Stevanus Andika Nasution
 
 @import url('header-navigation.css');
 @import url('side-navigation.css');
+@import url('logout-navigation.css');
 @import url('common.css');
