--- a/e-imp/asset/css/logout-navigation.css
+++ b/e-imp/asset/css/logout-navigation.css
@@ -4,12 +4,13 @@
 	transition: 0.5s;
 	overflow-x: hidden;
 	border: 1px solid #CCCCFF;
-	top: -80px;
+	top: 80px;
 	width: 250px;
 	background-color: #F7F9F9;
 	overflow : none;
 	right: -250px;
 	height: 100px;
+	display: block;
 }
 
 .logout-div a{
