--- a/e-imp/asset/css/header-navigation.css
+++ b/e-imp/asset/css/header-navigation.css
@@ -41,3 +41,21 @@
 	float: right;
 	text-decoration: none;
 }
+
+.hide-me{
+	display: none;
+}
+
+.user-menu: hover + .hide-me{
+	position: fixed;
+	transition: 0.5s;
+	border: 1px solid #CCCCFF;
+	top: 80px;
+	width: 250px;
+	background-color: #F7F9F9;
+	overflow : none;
+	height: 100px;
+	display: block;
+	right: 0px;	
+}	
+	
